--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -5,7 +5,6 @@
     <head>
         <title>{% block title %}Social Network{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'network/styles.css' %}" rel="stylesheet">
     </head>
     <body>
 
@@ -15,17 +14,18 @@
             <div>
               <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
+                    
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><strong>{{ user.username }}</strong></a>
+                        <a class="nav-link x-link" href="{% url 'create_post' %}">New Post</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link x-link" href="#">New Post</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link x-link" href="#">All Posts</a>
+                        <a class="nav-link x-link" href="{% url 'all_posts' %}">All Posts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link menu-item" href="#">Following</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><strong>{{ user.username.capitalize }}</strong></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
