--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -1,17 +1,12 @@
-div {
-  background-color: red;
-}
 
 .like-button {
-    background-color: red;
-    border: 1px solid blue;
+    border: none; 
     cursor: pointer;
     background-image: url('/static/network/heart_icon.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    width: 20px;
-    height: 20px;
+    width: 20px; height: 20px;
 }
 
 .like-button:hover {
@@ -19,6 +14,7 @@ div {
 }
 
 .like-button:active {
+    background-color: red;
+    border: none; 
     transform: scale(0.9);
 }
-
