--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -22,10 +22,10 @@
                         <a class="nav-link x-link" href="{% url 'all_posts' %}">All Posts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link menu-item" href="#">Following</a>
+                        <a class="nav-link menu-item" href="{% url 'following' %}">Following</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><strong>{{ user.username.capitalize }}</strong></a>
+                        <a class="nav-link" href="{% url 'profile' user.username %}"><strong>{{ user.username.capitalize }}</strong></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
