--- a/network/templates/network/login.html
+++ b/network/templates/network/login.html
@@ -1,7 +1,7 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
-
+<div class="container" style="padding: 20px;">
     <h2>Login</h2>
 
     {% if message %}
@@ -20,5 +20,5 @@
     </form>
 
     Don't have an account? <a href="{% url 'register' %}">Register here.</a>
-
+</div>
 {% endblock %}
